overflow bug fixed

--- a/css/file.css
+++ b/css/file.css
@@ -20,7 +20,8 @@ main{
 }
 footer{
     height: 70px;
-    background-color: #282828;    
+    background-color: #282828;  
+    position: relative;  
 }
 
 
@@ -39,15 +40,19 @@ footer{
 .container-sidebar{
     width: 60px;
     background-color: black;
+    height: calc(100vh - 70px);
+    overflow: auto;
 }
 .container-spotify-content{
     width: calc(100% - 60px);
     background-color: #141922;
+    height: calc(100vh - 70px);
+    overflow: auto;
 }
 /*  */
 .upgrade-now{
     text-align: right;
-    padding: 30px 0px;
+    padding: 20px 0px;
     background-color: rgba(0, 0, 0, .2);
 }
 .upgrade-now a{
